# Mr.-Moneypenny

./: .editorconfig  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
Patches/: v0.2.3.md
docs/: architecture.md  audit-v0.3.7.md  distribution.md  privacy.md  signing-key.asc  threat-model.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/csv_import/: ai_suggest.rs  categorize.rs  dedupe.rs  mod.rs  parser.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_seed_categories.sql  0003_curate_seed_actives.sql  0004_investing_kind.sql  0005_seed_electric_water.sql  0006_refunds.sql  0007_scheduled_jobs.sql  0008_recurring_rules.sql  0009_budget_alert_state.sql  0010_llm_usage.sql  0011_investment_balances.sql  0012_csv_import_profiles.sql  0013_merchant_rules.sql  0014_csv_expense_source.sql
src-tauri/src/domain/: budget.rs  category.rs  expense.rs  mod.rs  period.rs  recurring.rs
src-tauri/src/insights/: category_analyzer.rs  debt.rs  forecast.rs  mod.rs  monte_carlo.rs  range.rs  runway.rs  simulator.rs  stats.rs  trend.rs
src-tauri/src/llm/: anthropic.rs  dispatcher.rs  mod.rs  ollama.rs  pricing.rs  system_prompt.rs  tools.rs
src-tauri/src/repository/: budgets.rs  categories.rs  csv_import_profiles.rs  expenses.rs  llm_usage.rs  merchant_rules.rs  mod.rs  recurring_rules.rs  settings.rs
src-tauri/src/scheduler/: budget_alerts.rs  mod.rs  recurring.rs  weekly_summary.rs
src-tauri/src/secrets/: cipher.rs  kdf.rs  migration.rs  mod.rs  store.rs
src-tauri/src/telegram/: auth.rs  client.rs  formatter.rs  mod.rs  poller.rs  router.rs  state.rs
src-tauri/tests/: integration_db.rs  integration_dispatcher.rs  integration_insights.rs  integration_scheduler.rs  integration_telegram.rs
src/components/: Brand.tsx  ThemeToggle.tsx  UpdateBanner.tsx
src/lib/: currencies.ts  format.ts  store.ts  tauri.ts  theme.ts
src/styles/: globals.css  theme.css
src/views/: Budgets.tsx  Categories.tsx  CsvImport.tsx  Forecast.tsx  Household.tsx  Insights.tsx  Ledger.tsx  MainApp.tsx  PostSetupPlaceholder.tsx  Settings.tsx  ViewHeader.tsx
src/wizard/: Wizard.tsx
src/wizard/components/: Buttons.tsx  Layout.tsx
src/wizard/steps/: AnthropicConfig.tsx  Categories.tsx  ChooseLLM.tsx  CurrencyLocale.tsx  Done.tsx  OllamaConfig.tsx  Sanity.tsx  Telegram.tsx  Welcome.tsx
