[package]
name = "moneypenny"
version = "0.3.2"
description = "Mr. Moneypenny — privacy-first FOSS budgeting app"
authors = ["Wyatt Smith"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/wyattts/Mr.-Moneypenny"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moneypenny_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"], optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "time"] }
time = { version = "0.3", features = ["serde-well-known", "serde-human-readable", "formatting", "parsing", "macros"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
rand = "0.8"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
machine-uid = "0.5"
base64 = "0.22"
csv = "1"
strsim = "0.11"
# Migration-only: read v0.2.6 secrets from the OS keyring on first launch
# after upgrade and copy them into the new disk store. Will be dropped in
# v0.2.7 once the migration window closes.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }

[features]
# `desktop` pulls in tauri runtime + build script. Default enables it for
# normal `tauri dev` / `tauri build`. `cargo test --no-default-features`
# skips it so domain/insights tests run without GTK system libraries.
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-autostart", "dep:tauri-plugin-updater", "dep:tauri-plugin-single-instance"]
# Required for production tauri builds, DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
